[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/level_01/Level_01_info.gd" type="Script" id=1]
[ext_resource path="res://sprites/level_status/level_01.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/Wheel_01.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/trophy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/pink_line.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/CryingMouse.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/camera_01.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/level_01/LevelDesign.gd" type="Script" id=8]
[ext_resource path="res://sounds/music/Retro Beat.ogg" type="AudioStream" id=9]
[ext_resource path="res://scenes/Ball_RigidBody2D.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/background.jpg" type="Texture" id=11]
[ext_resource path="res://sprites/cage.png" type="Texture" id=12]
[ext_resource path="res://Fonts/Lora-VariableFont_wght.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://sprites/dialogue_box.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 286.25, 53 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65.5, 562.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 351, 51.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 63, 610.5 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 13 )

[node name="Level_01" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0

[node name="background" type="Sprite" parent="ColorRect"]
position = Vector2( 288, 512 )
scale = Vector2( 0.533333, 0.532292 )
texture = ExtResource( 11 )

[node name="LevelDesign" type="Node2D" parent="ColorRect"]
script = ExtResource( 8 )

[node name="Wheel" parent="ColorRect/LevelDesign" instance=ExtResource( 3 )]
position = Vector2( 288, 400 )

[node name="trophy" parent="ColorRect/LevelDesign" instance=ExtResource( 4 )]
visible = false
position = Vector2( 288, 400 )
scale = Vector2( 0.4, 0.4 )

[node name="pink_line" parent="ColorRect/LevelDesign" instance=ExtResource( 5 )]
position = Vector2( 288, 733 )

[node name="camera_01" parent="ColorRect/LevelDesign" instance=ExtResource( 7 )]

[node name="level_01_music" type="AudioStreamPlayer" parent="ColorRect/LevelDesign"]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -10.0
autoplay = true

[node name="outer_area_1" type="Area2D" parent="ColorRect/LevelDesign"]

[node name="downwards" type="CollisionShape2D" parent="ColorRect/LevelDesign/outer_area_1"]
position = Vector2( 291, 1077 )
shape = SubResource( 1 )

[node name="outer_area_2" type="Area2D" parent="ColorRect/LevelDesign"]

[node name="left" type="CollisionShape2D" parent="ColorRect/LevelDesign/outer_area_2"]
position = Vector2( -65, 567.5 )
shape = SubResource( 2 )

[node name="outer_area_3" type="Area2D" parent="ColorRect/LevelDesign"]

[node name="upwards" type="CollisionShape2D" parent="ColorRect/LevelDesign/outer_area_3"]
position = Vector2( 221, -48.75 )
shape = SubResource( 3 )

[node name="outer_area_4" type="Area2D" parent="ColorRect/LevelDesign"]

[node name="right" type="CollisionShape2D" parent="ColorRect/LevelDesign/outer_area_4"]
position = Vector2( 637, 513.5 )
shape = SubResource( 4 )

[node name="CryingMouse" parent="ColorRect/LevelDesign" instance=ExtResource( 6 )]
position = Vector2( 288, 402 )
scale = Vector2( 1.3, 1.3 )

[node name="Ball_RigidBody2D" parent="ColorRect/LevelDesign" instance=ExtResource( 10 )]
position = Vector2( 294, 706 )

[node name="cage" type="Sprite" parent="ColorRect/LevelDesign"]
position = Vector2( 288.223, 402 )
scale = Vector2( 0.191727, 0.174797 )
texture = ExtResource( 12 )

[node name="dialogue_box" type="Sprite" parent="ColorRect/LevelDesign"]
position = Vector2( 436.226, 798.582 )
rotation = 3.14159
scale = Vector2( 0.743872, 0.814861 )
texture = ExtResource( 14 )

[node name="Pause" type="Button" parent="ColorRect/LevelDesign"]
pause_mode = 2
margin_left = 384.0
margin_top = 875.0
margin_right = 496.0
margin_bottom = 942.0
custom_fonts/font = SubResource( 5 )
text = "Okay"

[node name="instructions" type="Label" parent="ColorRect/LevelDesign"]
margin_left = 307.0
margin_top = 741.0
margin_right = 563.0
margin_bottom = 888.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Your friend has been
caught and put up in cage.
 You have to save him
to prove your friendship"
align = 1

[node name="Level_01_info" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Level_01_info"]
position = Vector2( 287.5, 512.5 )
scale = Vector2( 0.536111, 0.532813 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="ColorRect/LevelDesign/outer_area_1" to="ColorRect/LevelDesign/Ball_RigidBody2D" method="_on_outer_area_1_body_entered"]
[connection signal="body_entered" from="ColorRect/LevelDesign/outer_area_2" to="ColorRect/LevelDesign/Ball_RigidBody2D" method="_on_outer_area_2_body_entered"]
[connection signal="body_entered" from="ColorRect/LevelDesign/outer_area_3" to="ColorRect/LevelDesign/Ball_RigidBody2D" method="_on_outer_area_3_body_entered"]
[connection signal="body_entered" from="ColorRect/LevelDesign/outer_area_4" to="ColorRect/LevelDesign/Ball_RigidBody2D" method="_on_outer_area_4_body_entered"]
[connection signal="pressed" from="ColorRect/LevelDesign/Pause" to="ColorRect/LevelDesign" method="_on_Pause_pressed"]
